Little refactoring of compareTo() Changed Float construction from new Float() to Float.valueOf() as recommended since java1.5